--- a/styles/colors.less
+++ b/styles/colors.less
@@ -3,7 +3,7 @@
 // A color scheme by Chris Kempson (http://chriskempson.com)
 
 // Grayscale
-@black:           #1d1f21; // 00
+@black:           #111; // 00
 @very-dark-gray:  #282a2e; // 01
 @dark-gray:       #373b41; // 02
 @gray:            #969896; // 03
